# diplomado-arquitectura-reto-2

./: .gitignore  README.md  k6-script.js
docs/: arquitectura.drawio.drawio
lambda/: Cargo.toml
lambda/src/: main.rs
logs/: Emergency Alert 1.eml  Emergency Alert 2.eml  Emergency Alert 3.eml  Emergency Alert 4.eml  logs-insights-results.xlsx
terraform/: main.tf  outputs.tf  variables.tf
terraform/modules/api-gateway/: main.tf  outputs.tf  variables.tf
terraform/modules/lambda/: main.tf  outputs.tf  variables.tf
terraform/modules/sqs/: main.tf  outputs.tf  variables.tf
